Compile/build for java 8+ (#229)